Show moves played in current round

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
     <br><br><br>
 
+    <div class="currentMoves"></div>
+
+    <br><br><br>
+
     <div class="scoreBoard">
       <div>Score:</div>
       <div id="playerScore">0</div>
